--- a/index.html
+++ b/index.html
@@ -16,6 +16,6 @@
     <p>This is some awesome text.</p>
   </header>
 
-  <script src="scripts/main.js"></script>
+  <script src="scripts/datastore.js"></script>
 </body>
 </html>
