--- a/index.html
+++ b/index.html
@@ -49,11 +49,18 @@
             <label for="flavorShot">Flavor Shot</label>
             <select id="flavorShot" class="form-control" name="flavor">
               <option value="">None</option>
-              <option value="caramel">Caramel</option>
+              <option value="caramel">Caramel1</option>
               <option value="almond">Almond</option>
               <option value="mocha">Mocha</option>
             </select>
           </div>
+          <div class="form-group">
+            <label for="strengthLevel">Strength</label>
+            <input name="strength" id="strengthLevel" type="range"
+                  class="form-control-range" value="30">
+          </div>
+          <button type="submit" class="btn btn-primary">Submit</button>
+          <button type="reset" class="btn btn-secondary">Reset</button>
         </form>
       </div>
     </div>
