--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             <label for="flavorShot">Flavor Shot</label>
             <select id="flavorShot" class="form-control" name="flavor">
               <option value="">None</option>
-              <option value="caramel">Caramel1</option>
+              <option value="caramel">Caramel</option>
               <option value="almond">Almond</option>
               <option value="mocha">Mocha</option>
             </select>
