--- a/index.html
+++ b/index.html
@@ -64,10 +64,21 @@
         </form>
       </div>
     </div>
+
+    <!--the checklist-->
+    <div class="card card-default">
+      <div class="card-body">
+        <h4>Pending orders: </h4>
+        <div data-coffee-order="checklist">
+
+        </div>
+      </div>
+    </div>
   </section>
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
   <script src="scripts/formhandler.js"></script>
+  <script src="scripts/checklist.js"></script>
   <script src="scripts/datastore.js"></script>
   <script src="scripts/truck.js"></script>
   <script src="scripts/main.js"></script>
