--- a/index.html
+++ b/index.html
@@ -21,11 +21,12 @@
         <form data-coffee-order="form">
           <div class="form-group">
             <label for="coffeeOrder">Cofee Order</label>
-            <input class="form-control" name="coffee" id="coffeeOrder" autofocus>
+            <input class="form-control" name="coffee" id="coffeeOrder"
+             autofocus required pattern="[a-zA-Z/s]+">
           </div>
           <div class="form-group">
             <label for="emailInput">Email</label>
-            <input class="form-control" type="email" name="emailAddress" id="emailInput" value="" placeholder="user@company.com">
+            <input class="form-control" type="email" name="emailAddress" id="emailInput" value="" placeholder="user@company.com" required>
           </div>
           <div class="radio">
             <label>
@@ -79,6 +80,7 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
   <script src="scripts/formhandler.js"></script>
   <script src="scripts/checklist.js"></script>
+  <script src="scripts/validation.js"></script>
   <script src="scripts/datastore.js"></script>
   <script src="scripts/truck.js"></script>
   <script src="scripts/main.js"></script>
