--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
           <div class="form-group">
             <label for="coffeeOrder">Cofee Order</label>
             <input class="form-control" name="coffee" id="coffeeOrder"
-             autofocus required pattern="[a-zA-Z/s]+">
+             autofocus required pattern="[a-zA-Z\s]+">
           </div>
           <div class="form-group">
             <label for="emailInput">Email</label>
